--- a/src/components/AppShell/AppShell.module.css
+++ b/src/components/AppShell/AppShell.module.css
@@ -23,5 +23,8 @@
     flex: 1;
     padding-left: var(--space-xl);
     padding-right: var(--space-xl);
+
+    /* Make sure that pre tags don't expand the tags */
+    min-width: 0;
   }
 }
